# libsudoku

./: .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
src/: CMakeLists.txt  board.cpp  board.h  generator.cpp  generator.h  solver.cpp  solver.h
src/embind/: CMakeLists.txt  em_solver.cpp
src/test/: board_tests.cpp  catch.hpp  generator_tests.cpp  solver_tests.cpp
test/: board_tests.cpp  generator_tests.cpp  solver_tests.cpp
